--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.red-text {
-  color: red;
+h1 {
+  color: rgb(64, 191, 246);
 }
